--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "vue": "^3.2.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@storybook/addon-actions": "^6.4.0-beta.8",
+    "@storybook/addon-essentials": "^6.4.0-beta.8",
+    "@storybook/addon-links": "^6.4.0-beta.8",
+    "@storybook/vue3": "^6.4.0-beta.8",
     "@vitejs/plugin-vue": "^1.9.3",
+    "babel-loader": "^8.2.2",
+    "storybook-builder-vite": "^0.1.1",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
+    "vue-loader": "^16.8.1",
     "vue-tsc": "^0.3.0"
   }
 }
