--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@storybook/addon-links": "^6.4.0-beta.8",
     "@storybook/vue3": "^6.4.0-beta.8",
     "@vitejs/plugin-vue": "^1.9.3",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
+    "postcss": "^8.3.9",
     "storybook-builder-vite": "^0.1.1",
+    "tailwindcss": "^2.2.17",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vue-loader": "^16.8.1",
