feat: install remix icon

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "remixicon": "^2.5.0",
     "vue": "^3.2.16"
   },
   "devDependencies": {
