--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "postcss": "^8.3.9",
+    "sass": "^1.43.2",
     "storybook-builder-vite": "^0.1.1",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.3",
