docs: create docs with vuepress

--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@vuepress/bundler-vite": "^2.0.0-beta.27",
+    "@vuepress/theme-default": "^2.0.0-beta.27",
     "remixicon": "^2.5.0",
     "vue": "^3.2.16",
     "vue3-click-away": "^1.2.1"
@@ -20,6 +24,7 @@
     "@storybook/addon-links": "^6.4.0-beta.8",
     "@storybook/vue3": "^6.4.0-beta.8",
     "@vitejs/plugin-vue": "^1.9.3",
+    "@vuepress/cli": "^2.0.0-beta.27",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "postcss": "^8.3.9",
