--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "@vuepress/bundler-vite": "^2.0.0-beta.27",
@@ -19,17 +17,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
-    "@storybook/addon-actions": "^6.4.0-beta.8",
-    "@storybook/addon-essentials": "^6.4.0-beta.8",
-    "@storybook/addon-links": "^6.4.0-beta.8",
-    "@storybook/vue3": "^6.4.0-beta.8",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vuepress/cli": "^2.0.0-beta.27",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "postcss": "^8.3.9",
     "sass": "^1.43.2",
-    "storybook-builder-vite": "^0.1.1",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
