--- a/package.json
+++ b/package.json
@@ -1,6 +1,28 @@
 {
   "name": "ornament-ui",
-  "version": "0.0.0",
+  "version": "0.1.1",
+  "keywords": [
+    "vue",
+    "vue.js",
+    "vue3",
+    "ui framework",
+    "component framework",
+    "ui library",
+    "component library",
+    "material",
+    "bootstrap",
+    "fluent",
+    "tailwind"
+  ],
+  "files": ["dist"],
+  "main": "./dist/ornament.umd.js",
+  "module": "./dist/ornament.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/ornament.es.js",
+      "require": "./dist/ornament.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
