--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "jest": "^27.4.5",
+    "patch-vue-directive-ssr": "^0.0.1",
     "sass": "^1.43.2",
     "ts-jest": "^27.1.2",
     "typescript": "^4.4.3",
