--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@babel/core": "^7.15.8",
     "@types/jest": "^27.0.3",
     "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/test-utils": "^2.0.0-rc.18",
+    "@vue/test-utils": "^2.2.6",
     "@vue/vue3-jest": "27.0.0-alpha.4",
     "@vuepress/cli": "^2.0.0-beta.27",
     "autoprefixer": "^10.3.7",
