--- a/package.json
+++ b/package.json
@@ -41,28 +41,32 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-beta.27",
+    "@vuepress/bundler-vite": "^2.0.0-beta.45",
     "@vuepress/theme-default": "^2.0.0-beta.27",
-    "kwik-css": "^0.1.5",
-    "remixicon": "^2.5.0",
-    "vue": "^3.2.16"
+    "kwik-css": "^0.1.6",
+    "remixicon": "^3.5.0",
+    "uid": "^2.0.2",
+    "vue": "^3.3.4",
+    "wait-for-expect": "^3.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@types/jest": "^27.0.3",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "@vue/vue3-jest": "27.0.0-alpha.4",
-    "@vuepress/cli": "^2.0.0-beta.27",
-    "autoprefixer": "^10.3.7",
-    "babel-loader": "^8.2.2",
-    "jest": "^27.4.5",
+    "@babel/core": "^7.23.0",
+    "@types/jest": "^29.5.5",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/vue3-jest": "29.2.6",
+    "@vuepress/cli": "^2.0.0-beta.45",
+    "autoprefixer": "^10.4.16",
+    "babel-loader": "^9.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0",
     "patch-vue-directive-ssr": "^0.0.1",
-    "sass": "^1.43.2",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.4",
-    "vue-loader": "^16.8.1",
-    "vue-tsc": "^0.3.0"
+    "sass": "^1.68.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vue-loader": "^17.2.2",
+    "vue-tsc": "^1.8.15"
   }
 }
