--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "kwik-css": "^0.1.6",
     "remixicon": "^3.5.0",
     "uid": "^2.0.2",
-    "vue": "^3.3.4",
-    "wait-for-expect": "^3.0.2"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
