--- a/package.json
+++ b/package.json
@@ -37,12 +37,11 @@
     "serve": "vite preview",
     "test": "jest src",
     "test:watch": "jest --watch",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-beta.45",
-    "@vuepress/theme-default": "^2.0.0-beta.27",
     "kwik-css": "^0.1.6",
     "remixicon": "^3.5.0",
     "uid": "^2.0.2",
@@ -54,7 +53,6 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/test-utils": "^2.4.1",
     "@vue/vue3-jest": "29.2.6",
-    "@vuepress/cli": "^2.0.0-beta.45",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "jest": "^29.7.0",
@@ -65,6 +63,7 @@
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
+    "vitepress": "^1.0.0-rc.20",
     "vue-loader": "^17.2.2",
     "vue-tsc": "^1.8.15"
   }
