--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "serve": "vite preview",
     "test": "jest src",
+    "test:vitest": "vitest",
     "test:watch": "jest --watch",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
@@ -64,6 +65,7 @@
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vitepress": "^1.0.0-rc.20",
+    "vitest": "^0.34.6",
     "vue-loader": "^17.2.2",
     "vue-tsc": "^1.8.15"
   }
