--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
     "target": "esnext",
     "useDefineForClassFields": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "baseUrl": ".",
-    "types": ["vite/client", "@types/jest"],
+    "types": ["vite/client"],
     "paths": {
       "@/*": ["src/*"]
     },
